Adds bazel rules for building and testing.